# pydantic-settings-aws

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
configuration/aws/: index.html
configuration/parameter-store/: index.html
configuration/secrets-manager/: index.html
docs/: index.md  reference.md
docs/configuration/: aws.md  parameter-store.md  secrets-manager.md
docs/examples/: aws.md  parameter-store.md  secrets-manager.md
docs/reload/: index.md  version-checkers.md
docs/stylesheets/: extra.css
examples/aws/: index.html
examples/parameter-store/: index.html
examples/secrets-manager/: index.html
explanation/: index.html
how-to-guides/: index.html
pydantic_settings_aws/: __init__.py  aws.py  config.py  errors.py  fields.py  logger.py  main.py  models.py  settings.py  sources.py  utils.py  version.py
pydantic_settings_aws/.agents/skills/: SKILL.md
pydantic_settings_aws/reload/: __init__.py  events.py  reloader.py  version_checkers.py
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: aws_mocks.py  aws_test.py  boto3_mocks.py  main_test.py  models_test.py  settings_mocks.py  settings_test.py  thread_safety_test.py  utils_test.py
tests/reload/: reloader_test.py  version_checkers_test.py
tutorials/: index.html
